--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "body-parser": "^1.18.2",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
+    "express-flash": "0.0.2",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
     "nodemailer": "^4.6.0"
   }
 }
